Fix: add @nicfarges corrections after proofreading

--- a/lessons/ch2-09-inflation.tex
+++ b/lessons/ch2-09-inflation.tex
@@ -22,7 +22,7 @@ du second camp.
 Habituellement, les effets de l'inflation ne sautent pas aux yeux. Selon le taux
 d'inflation (ainsi que d'autres facteurs), le délai entre la cause et la
 conséquence peut s'étendre sur plusieurs années. De plus, l'inflation touche
-certains catégories plus que d'autres. Comme Henry Hazlitt le fait remarquer
+certaines catégories plus que d'autres. Comme Henry Hazlitt le fait remarquer
 dans \textit{L'Économie Politique en Une Leçon} : \enquote{L'art de la politique
 économique consiste à ne pas considérer uniquement l'aspect immédiat d'un
 problème ou d'un acte, mais à envisager ses effets plus lointains ; il consiste
