--- a/lessons/ch2-11-money.tex
+++ b/lessons/ch2-11-money.tex
@@ -47,7 +47,7 @@ coquillages, des os spécifiques, divers types de bijoux, puis plus tard des
 métaux rares comme l'argent ou l'or.
 
 \begin{quotation}\begin{samepage}
-\enquote{En ce sens, il est plus représentatif d'un métal précieux. Au lieu que
+\enquote{En ce sens, il ressemble plus à un métal précieux. Au lieu que
 ce soit l'offre qui change afin de maintenir la valeur, celle-ci est
 prédéterminée et c'est la valeur qui change.}
 \begin{flushright} -- Satoshi Nakamoto\footnote{Satoshi Nakamoto, dans une
