--- a/lessons/ch2-13-fractional-reserve-insanity.tex
+++ b/lessons/ch2-13-fractional-reserve-insanity.tex
@@ -28,7 +28,7 @@ justement deux de ces mots sophistiqués, dissimulant la réalité des choses en
 présentant comme complexe et difficile à comprendre. Si vous deviez expliquer ça
 à un enfant, vous verriez rapidement la folie qu'ils renferment.
 
-Godfrey Bloom l'a exprimé bien mieux que je ne pourrai jamais le faire, en
+Godfrey Bloom l'a exprimé bien mieux que je ne pourrais jamais le faire, en
 s'adressant au Parlement Européen lors d'un débat commun :
 
 \begin{quotation}\begin{samepage}
