Remove invalid characters

--- a/lessons/ch3-15-strength-in-numbers.tex
+++ b/lessons/ch3-15-strength-in-numbers.tex
@@ -37,7 +37,7 @@ secondes, alors transformons-les afin de pouvoir les appréhender :
 
 \begin{figure}
   \includegraphics{assets/images/xkcd-1225.png}
-  \caption{Il y a environ 1 billion de secondes. Source : xkcd n°1225}
+  \caption{Il y a environ 1 billion de secondes. Source : xkcd 1225}
   \label{fig:xkcd-1225}
 \end{figure}
 
@@ -144,7 +144,7 @@ Même si vous attaquez avec la puissance d'un millier d'étoiles. Littéralement
 \begin{figure}
   \centering
   \includegraphics[width=8cm]{assets/images/xkcd-538.png}
-  \caption{Attaque à la clé à molette à 5\$. Source : xkcd n°538}
+  \caption{Attaque à la clé à molette à 5\$. Source : xkcd 538}
   \label{fig:xkcd-538}
 \end{figure}
 
