Add @gill3s modifications

--- a/frontmatter/foreword.tex
+++ b/frontmatter/foreword.tex
@@ -16,7 +16,7 @@ d'étudier pour mon MBA, est le lieu où m'est apparue la révélation
 techniques et sociales afin de laisser Bitcoin m'envelopper spirituellement.
 Après avoir \enquote{acheté haut} pendant la bulle de novembre 2013, j'ai dû
 tirer des enseignements très difficiles de l'interminable et destructeur marché
-baisser de trois ans qui s'en suivit. Ces 21 leçons m'auraient particulièrement
+baissier de trois ans qui s'ensuivit. Ces 21 leçons m'auraient particulièrement
 bien aidé à ce moment-là. La plupart sont simplement des vérités naturelles qui,
 pour le néophyte, sont assombries par un film opaque et fragile. Cependant,
 d'ici la fin de ce livre, cette façade volera en éclats.
