--- a/lessons/ch1-01-immutability-and-change.tex
+++ b/lessons/ch1-01-immutability-and-change.tex
@@ -1,4 +1,4 @@
-\chapter{Immutabilité et changement}
+\chapter{Immuabilité et changement}
 \label{les:1}
 
 \begin{chapquote}{Alice}
@@ -14,7 +14,7 @@ nouveau}, donc chaque tentative de comparaison à des concepts antérieurs -- y
 compris l'appeler or numérique ou Internet de l'argent -- est condamnée à ne pas
 pouvoir rendre compte de son entièreté. Quelle que soit votre analogie favorite,
 il y a deux aspects de Bitcoin réellement essentiels : la décentralisation et
-l'immutabilité.
+l'immuabilité.
 
 \paragraph{}
 On peut voir Bitcoin comme un contrat social automatisé\footnote{Hasu, Unpacking
