--- a/main.bib
+++ b/main.bib
@@ -1,7 +1,7 @@
 % About
 @misc{bitcoin-is,
 	author = "Beautyon",
-	month = "October",
+	month = "10",
 	title = "Bitcoin is. And that is enough.",
 	howpublished = "\url{https://hackernoon.com/bitcoin-is-and-that-is-enough-e3116870eed1}",
 	year = "2019"
@@ -10,7 +10,7 @@
 % Lesson 1
 @misc{social-contract,
 	author = "Hasu",
-	month = "December",
+	month = "12",
 	series = "Bitcoin Skeptics Series",
 	title = "Unpacking Bitcoin's Social Contract",
 	howpublished = "\url{https://uncommoncore.co/unpacking-bitcoins-social-contract}",
@@ -24,7 +24,7 @@
 }
 @misc{satoshi-set-in-stone,
 	author = "Satoshi Nakamoto",
-	month = "June",
+	month = "06",
 	publisher = "Bitcointalk Forum",
 	title = "Re: Transactions and Scripts: DUP HASH160 ... EQUALVERIFY CHECKSIG",
 	howpublished = "\url{https://bitcointalk.org/index.php?topic=195.msg1611\#msg1611}",
@@ -33,7 +33,7 @@
 @misc{merkle-dao,
 	author = "Ralph C. Merkle",
 	journal = "Cryonics",
-	month = "July-August",
+	month = "08",
 	number = "4",
 	pages = "28--40",
 	publisher = "Journal",
@@ -44,7 +44,7 @@
 }
 @misc{carnivores,
 	author = "Jordan Pearson",
-	month = "September",
+	month = "09",
 	title = "Inside the World of the Bitcoin Carnivores: Why a small community of Bitcoin users is eating meat exclusively",
 	howpublished = "\url{https://motherboard.vice.com/en_us/article/ne74nw/inside-the-world-of-the-bitcoin-carnivores}",
 	year = "2017"
@@ -63,7 +63,7 @@
 	author = "Saifedean Ammous",
 	institution = "Bayerische Landesbank",
 	location = "Munich",
-	month = "May",
+	month = "05",
 	title = "Presentation on The Bitcoin Standard",
 	howpublished = "\url{https://www.bayernlb.de/internet/media/de/ir/downloads_1/bayernlb_research/sonderpublikationen_1/bitcoin_munich_may_28.pdf}",
 	year = "2018"
@@ -78,7 +78,7 @@
 }
 @misc{gigi:magic-spell,
 	author = "Gigi",
-	month = "Aug",
+	month = "08",
 	title = "The Magic Dust of Cryptography -- How digital information is changing our societyBitcoin's Gravity",
 	howpublished = "\url{https://dergigi.com/2018/08/17/the-magic-dust-of-cryptography/}",
 	year = "2018"
@@ -94,7 +94,7 @@
 @misc{wbd049,
 	author = "Peter Van Valkenburgh",
 	editor = "Peter McCormack",
-	month = "November",
+	month = "11",
 	title = "Coin Center's Peter Van Valkenburg on Preserving the Freedom to Innovate with Public Blockchains",
 	howpublished = "\url{http://bit.ly/valkenburgh}",
 	year = "2018"
@@ -103,7 +103,7 @@
 % Lesson 4
 @misc{bitcoin-identity,
 	author = "Nic Carter",
-	month = "November",
+	month = "11",
 	title = "Bitcoin's Existential Crisis / What is it like to be a bitcoin?",
 	howpublished = "\url{https://medium.com/s/story/what-is-it-like-to-be-a-bitcoin-56109f3e6753}",
 	year = "2018"
@@ -119,14 +119,14 @@
 % Lesson 5
 @misc{bitcoin-different,
 	author = "Jimmy Song",
-	month = "April",
+	month = "04",
 	title = "Why Bitcoin is Different",
 	howpublished = "\url{https://medium.com/@jimmysong/why-bitcoin-is-different-e17b813fd947}",
 	year = "2018"
 }
 @misc{gold-gift-gods,
 	author = "The Austrian Mint",
-	month = "November",
+	month = "11",
 	title = "Gold: The Extraordinary Metal",
 	howpublished = "\url{https://www.muenzeoesterreich.at/eng/discover/for-investors/gold-the-extraordinary-metal}",
 	year = "2017"
@@ -135,7 +135,7 @@
 % Lesson 6
 @misc{america-regulate-bitcoin,
 	author = "Beautyon",
-	month = "March",
+	month = "03",
 	title = "Why America Can't Regulate Bitcoin",
 	howpublished = "\url{https://hackernoon.com/why-america-cant-regulate-bitcoin-8c77cee8d794}",
 	year = "2018"
@@ -168,7 +168,7 @@
 % Lesson 7
 @misc{lopp-tweet,
 	author = "Jameson Lopp",
-	month = "November",
+	month = "11",
 	title = "No one has found the bottom of the Bitcoin rabbit hole.",
 	howpublished = "\url{https://twitter.com/lopp/status/1061415918616698881}",
 	year = "2018"
@@ -177,14 +177,14 @@
 % Lesson 8
 @misc{aarontaycc-tweet,
 	author = "Fiat Minimalist",
-	month = "December",
+	month = "12",
 	title = "Isn't it ironic that Bitcoin has taught me more about money than all these years I've spent working for financial institutions?",
 	howpublished = "\url{https://twitter.com/fiatminimalist/status/1072880815661436928}",
 	year = "2018"
 }
 @misc{bitcoindunny-tweet,
 	author = "Dunny",
-	month = "November",
+	month = "11",
 	title = "I’ve learned more about finance, economics, technology, cryptography, human psychology, politics, game theory, legislation, and myself in the last three months of crypto than the last three and a half years of college",
 	howpublished = "\url{https://twitter.com/BitcoinDunny/status/935330541263519745}",
 	year = "2017"
@@ -199,7 +199,7 @@
 }
 @misc{robert-kiyosaki,
 	author = "Robert Kiyosaki",
-	month = "July",
+	month = "07",
 	publisher = "TEDxUCSD",
 	title = "Why the Rich are Getting Richer",
 	howpublished = "\url{https://youtu.be/abMQhaMdQu0}",
@@ -240,7 +240,7 @@
   author = "{Wikipedia contributors}",
   title = "2013–present economic crisis in Venezuela --- {Wikipedia}{,} The Free Encyclopedia",
   year = "2019",
-  howpublished = "\url{https://en.wikipedia.org/w/index.php?title=2013%E2%80%93present_economic_crisis_in_Venezuela&oldid=918242758}"
+  howpublished = "\url{https://en.wikipedia.org/w/index.php?title=2013\%E2\%80\%93present_economic_crisis_in_Venezuela&oldid=918242758}"
 }
 @misc{wiki:hyperinflation,
   author = "{Wikipedia contributors}",
@@ -262,7 +262,7 @@
 }
 @misc{gigi:energy,
 	author = "Gigi",
-	month = "June",
+	month = "06",
 	title = "Bitcoin's Energy Consumption -- A shift in perspective",
 	howpublished = "\url{https://dergigi.com/2018/06/10/bitcoin-s-energy-consumption/}",
 	year = "2018"
@@ -280,7 +280,7 @@
 	isbn = "9780674991835",
 	publisher = "Harvard University Press",
 	title = "Plato in Twelve Volumes, Vol. 3. (Euthydemus section 304a/304b)",
-	address = "\url{http://www.perseus.tufts.edu/hopper/text?doc=Perseus%3Atext%3A1999.01.0178%3Atext%3DEuthyd.%3Asection%3D304a}",
+	howpublished = "\url{http://www.perseus.tufts.edu/hopper/text?doc=Perseus\%3Atext\%3A1999.01.0178\%3Atext\%3DEuthyd.\%3Asection\%3D304a}",
 	year = "2017"
 }
 @misc{wiki:theory-of-value,
@@ -305,10 +305,10 @@
 % Lesson 11
 @misc{satoshi-precious-metal,
 	author = "Satoshi Nakamoto",
-	month = "February",
-	publisher = "P2PFoundation Forums",
+	month = "02",
+	publisher = "P2PFoundation Forum",
 	title = "Bitcoin open source implementation of P2P currency",
-	howpublished = "\url{http://p2pfoundation.ning.com/forum/topics/bitcoin-open-source?commentId=2003008%3AComment%3A9562}",
+	howpublished = "\url{http://p2pfoundation.ning.com/forum/topics/bitcoin-open-source?commentId=2003008\%3AComment\%3A9562}",
 	year = "2009"
 }
 @book{end-the-fed,
@@ -362,7 +362,7 @@
 % Lesson 13
 @misc{godfrey-bloom,
 	author = "Godfrey Bloom",
-	month = "May",
+	month = "05",
 	publisher = "UK Committee on Economic and Monetary Affairs",
 	title = "Why the whole banking system is a scam",
 	howpublished = "\url{https://youtu.be/hYzX3YZoMrs}",
@@ -440,10 +440,10 @@
 % Lesson 15
 @misc{satoshi-sha256,
 	author = "Satoshi Nakamoto",
-	month = "June",
+	month = "06",
 	publisher = "Bitcointalk Forum",
 	title = "Dealing with SHA-256 Collisions",
-	howpublished = "\url{https://bitcointalk.org/index.php?topic=191.msg1585#msg1585}",
+	howpublished = "\url{https://bitcointalk.org/index.php?topic=191.msg1585\#msg1585}",
 	year = "2010"
 }
 @book{bruce-schneier,
@@ -455,7 +455,7 @@
 }
 @misc{call-to-cryptographic-arms,
 	author = "Julian Assange",
-	month = "December",
+	month = "12",
 	publisher = "OR Books, New York",
 	title = "Cypherpunks: Freedom and the Future of the Internet - Introduction: A call to cryptographic arms",
 	howpublished = "\url{https://cryptome.org/2012/12/assange-crypto-arms.htm}",
@@ -463,10 +463,10 @@
 }
 @misc{epii,
 	author = "epii",
-	month = "May",
+	month = "05",
 	publisher = "Bitcointalk Forum",
 	title = "New bitcoin logo",
-	howpublished = "\url{https://bitcointalk.org/index.php?topic=4994.msg140770#msg140770}",
+	howpublished = "\url{https://bitcointalk.org/index.php?topic=4994.msg140770\#msg140770}",
 	year = "2011"
 }
 @misc{wiki:LGM,
@@ -491,7 +491,7 @@
   author = "{Wikipedia contributors}",
   title = "Landauer's principle --- {Wikipedia}{,} The Free Encyclopedia",
   year = "2019",
-  howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Landauer%27s_principle&oldid=907333330}"
+  howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Landauer\%27s_principle&oldid=907333330}"
 }
 @misc{wiki:dyson,
   author = "{Wikipedia contributors}",
@@ -521,7 +521,7 @@
 % Lesson 16
 @misc{bitcoin-announcement,
 	author = "Satoshi Nakamoto",
-	month = "February",
+	month = "02",
 	publisher = "P2PFoundation Forum",
 	title = "Bitcoin open source implementation of P2P currency",
 	howpublished = "\url{http://p2pfoundation.ning.com/forum/topics/bitcoin-open-source}",
@@ -529,7 +529,7 @@
 }
 @article{whitepaper,
 	author = "Satoshi Nakamoto",
-	month = "October",
+	month = "11",
 	title = "Bitcoin: A Peer-to-Peer Electronic Cash System",
 	howpublished = "\url{https://bitcoin.org/bitcoin.pdf}",
 	year = "2008"
@@ -574,7 +574,7 @@
   author = "{Wikipedia contributors}",
   title = "Elliptic-curve cryptography --- {Wikipedia}{,} The Free Encyclopedia",
   year = "2019",
-  howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Elliptic-curve_cryptography&oldid=916608234#Backdoors}"
+  howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Elliptic-curve_cryptography&oldid=916608234\#Backdoors}"
 }
 @misc{web:bootstrapping,
   author = "Guix Contributors",
@@ -601,7 +601,7 @@
 % Lesson 18
 @misc{satoshi-centralized-nature,
 	author = "Satoshi Nakamoto",
-	month = "February",
+	month = "02",
 	publisher = "P2PFoundation Forum",
 	title = "Re: Bitcoin open source implementation of P2P currency",
 	howpublished = "\url{http://p2pfoundation.ning.com/forum/topics/bitcoin-open-source}",
@@ -609,10 +609,10 @@
 }
 @misc{satoshi-open-source,
 	author = "Satoshi Nakamoto",
-	month = "December",
+	month = "12",
 	publisher = "Bitcointalk Forum",
 	title = "Re: Questions about Bitcoin",
-	howpublished = "\url{https://bitcointalk.org/index.php?topic=13.msg46#msg46}",
+	howpublished = "\url{https://bitcointalk.org/index.php?topic=13.msg46\#msg46}",
 	year = "2009"
 }
 @misc{btcwiki:p2sh,
@@ -643,7 +643,7 @@
 % Lesson 19
 @misc{snowden,
 	author = "Edward Snowden",
-	month = "June",
+	month = "06",
 	publisher = "The Guardian",
 	title = "Edward Snowden: NSA whistleblower answers reader questions ",
 	howpublished = "\url{https://www.theguardian.com/world/2013/jun/17/edward-snowden-nsa-files-whistleblower}",
@@ -657,14 +657,14 @@
 }
 @article{4chan-math,
 	author = "{Anonymous 4chan Poster, Robin Houston, Jay Pantone, and Vince Vatter}",
-	month = "October",
+	month = "11",
 	title = "A lower bound on the length of the shortest superpattern",
   howpublished = "\url{https://oeis.org/A180632/a180632.pdf}",
 	year = "2018"
 }
 @misc{article12,
 	author = "United Nations General Assembly",
-	month = "December",
+	month = "12",
 	title = "The Universal Declaration of Human Rights",
 	year = "1948"
 }
@@ -673,7 +673,7 @@
 % Human Action, see above
 @misc{cypherpunk-manifesto,
 	author = "Eric Hughes",
-	month = "March",
+	month = "03",
 	publisher = "Activism.net",
 	title = {A Cypherpunk's Manifesto},
 	howpublished = "\url{https://www.activism.net/cypherpunk/manifesto.html}",
@@ -681,7 +681,7 @@
 }
 @misc{satoshi-mail-code-first,
 	author = "Satoshi Nakamoto",
-	month = "November",
+	month = "11",
 	publisher = "Cryptography Mailinglist",
 	title = "Re: Bitcoin P2P e-cash paper",
 	howpublished = "\url{https://www.metzdowd.com/pipermail/cryptography/2008-November/014832.html}",
@@ -689,17 +689,17 @@
 }
 @misc{satoshi-delay,
 	author = "Satoshi Nakamoto",
-	month = "June",
+	month = "06",
 	publisher = "BitcoinTalk Forum",
 	title = "Re: 0.3 almost ready",
-	howpublished = "\url{https://bitcointalk.org/index.php?topic=199.msg1670#msg1670}",
+	howpublished = "\url{https://bitcointalk.org/index.php?topic=199.msg1670\#msg1670}",
 	year = "2010"
 }
 
 % Lesson 21
 @misc{william-gibson,
 	author = "William Gibson",
-	month = "October",
+	month = "10",
 	publisher = "NPR",
 	title = "The Science in Science Fiction",
 	howpublished = "\url{https://www.npr.org/2018/10/22/1067220/the-science-in-science-fiction}",
@@ -707,7 +707,7 @@
 }
 @misc{tech-adoption,
 	author = "Jeff Desjardins",
-	month = "February",
+	month = "02",
 	publisher = "Visual Capitalist",
 	title = "The Rising Speed of Technological Adoption",
 	howpublished = "\url{https://www.visualcapitalist.com/rising-speed-technological-adoption/}",
@@ -715,7 +715,7 @@
 }
 @misc{7-network-effects,
 	author = "Trace Mayer",
-	month = "January",
+	month = "01",
 	publisher = "CRYPSA -- LaGuardia Community College",
 	title = "The 7 Network Effects of Bitcoin",
 	howpublished = "\url{https://www.thrivenotes.com/the-7-network-effects-of-bitcoin/}",
@@ -750,7 +750,7 @@
 @misc{web:lightning-nodes,
 	author = "Wilma Woo",
 	publisher = "Bitcoinist",
-	month = "January",
+	month = "01",
 	title = "'Unfairly Cheap' Lightning Network Mainnet Hits 40 Nodes, 60 Channels",
 	howpublished = "\url{https://bitcoinist.com/bitcoin-lightning-network-mainnet-nodes/}",
 	year = "2018"
@@ -758,7 +758,7 @@
 @misc{pew-research,
 	author = "Susannah Fox and Lee Rainie",
 	publisher = "Pew Research Center -- Internet \\& Technology",
-	month = "February",
+	month = "02",
 	title = "How the internet has woven itself into American life",
 	howpublished = "\url{https://pewrsr.ch/32M7Qmg}",
 	year = "2014"
@@ -774,7 +774,7 @@
 
 @misc{gigi:gravity,
 	author = "Gigi",
-	month = "May",
+	month = "05",
 	title = "Bitcoin's Gravity -- How idea-value feedback loops are pulling people in",
 	howpublished = "\url{https://dergigi.com/2019/05/01/bitcoins-gravity/}",
 	year = "2019"
